<resources>
    <string name="app_name">My calculator</string>

    <string name="button_number_0">0</string>
    <string name="button_number_1">1</string>
    <string name="button_number_2">2</string>
    <string name="button_number_3">3</string>
    <string name="button_number_4">4</string>
    <string name="button_number_5">5</string>
    <string name="button_number_6">6</string>
    <string name="button_number_7">7</string>
    <string name="button_number_8">8</string>
    <string name="button_number_9">9</string>
    <string name="button_plus">+</string>
    <string name="button_sub">-</string>
    <string name="button_mul">x</string>
    <string name="button_div">&#247;</string>
    <string name="button_eq">=</string>
    <string name="button_percent">%</string>
    <string name="button_dot">.</string>
    <string name="button_backspace">C</string>
    <string name="button_clear">CC</string>
    <string name="button_fact">!</string>
    <string name="button_pow">^</string>
    <string name="button_sqrt">&#8730;</string>
    <string name="button_pi">&#960;</string>
    <string name="button_sin">sin</string>
    <string name="button_cos">cos</string>
    <string name="button_tan">tan</string>
    <string name="button_ln">ln</string>
    <string name="button_left_bracket">(</string>
    <string name="button_right_bracket">)</string>
    <string name="button_e">e</string>
    <string name="button_find">Найти</string>

    <string name="title_activity_engineer_calc">Инженерный</string>
    <string name="title_activity_main_calc">Обычный</string>
    <string name="title_activity_main">Калькулятор</string>

    <string name="menu_about">О программе</string>
    <string name="menu_about_title">О программе</string>
    <string name="menu_about_message">Это калькулятор Комарова Ильи, 6133!</string>

    <string name="menu_exit">Выход</string>
    <string name="menu_exit_title">Выход</string>
    <string name="menu_exit_message">Вы уверены, что хотите выйти?</string>
    <string name="menu_exit_cancel_text">Вот и правильно!</string>

    <string name="nav_calc">Калькулятор</string>
    <string name="nav_history">История</string>
    <string name="nav_graphs">Графики</string>
    <string name="nav_settings">Настройки</string>

    <string name="button_ok">Ок</string>
    <string name="button_cancel">Отмена</string>

    <string name="switch_on">On</string>
    <string name="switch_off">Off</string>

    <string name="settings_act">Настройки</string>
    <string name="settings_general">Общие</string>
    <string name="settings_degrees">Углы</string>
    <string name="settings_degrees_summary">Единицы измерения углов</string>
    <string name="settings_text_default">Текст по умолчанию</string>
    <string name="settings_text">Имя пользователя</string>
    <string name="settings_switch">Сохранять результаты</string>
    <string name="settings_text_summary">Отображаемое на экране имя пользователя</string>
    <string name="settings_switch_summary">Результаты будут сохраняться при закрытии программы</string>
    <string name="settings_color">Цвет</string>
    <string name="settings_color_summary">Выбор основной цвет</string>

    <string name="colorpicker_title">Выберите цвет</string>
    <string name="text_dialog_header">Введите текст</string>
    <string name="text_dialog_hint">Здесь..</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="datepicker_title">Когда я учил матан</string>
    <string name="datepicker_choose_date">Выберите дату</string>
    <string name="datepicker_ready">Готово</string>

    <string name="pref_saveResults">saveResults</string>
    <string name="pref_username">username</string>
    <string name="pref_angles">angles</string>
    <string name="pref_color">color</string>
    <string name="text_view">2+2=5</string>

    <string-array name="settings_degrees">
        <item>Градусы</item>
        <item>Радианы</item>
        <item>Стерадианы</item>
    </string-array>
    <string name="title_activity_history">История</string>

    <string name="action_settings">Settings</string>
    <string name="find_hint">Введите текст для поиска</string>
</resources>
